--- a/biografia.html
+++ b/biografia.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="utf-8">
   <meta name="description" content="Biografía de Charly García.">
-  <meta name="keywords" content="historia biografia infancia banda bandas canción canciones música rock charly garcía Carlos Garcia músico artista bohemio pianista piano música_argentina rock_argentino rock_progresivo progresivo 
+  <meta name="keywords" content="historia biografia infancia banda bandas canción canciones música rock charly garcía Carlos Garcia músico artista bohemio pianista piano música_argentina rock_argentino rock_progresivo progresivo
   discos discografia seru serugiran maquina de hacer pajaros maquinadehacerpajaros suigeneris sui generis leon gieco porSuiGieco Aznar Pedroaznar Mercedes Sosa
   mercedessosa Roberto Pettinato Robertopettinato Cerati gustavocerati Spinetta luisalbertospinetta">
   <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -15,32 +15,20 @@
 </head>
 
 <body>
-  <header class="top">
-    <nav class="navegador">
-      <ul class="menu">
-        <li><a href="index.html">Inicio</a></li>
-        <li><a href="biografia.html">Biografía</a></li>
-        <li><a href="galeria.html">Galería</a></li>
-        <li><a href="discografia.html">Discografía</a>
-          <ul class="submenu">
-            <li><a href="discografia.html#suiGeneris">Sui Generis</a></li>
-            <li><a href="discografia.html#gieco">PorSuiGieco</a></li>
-            <li><a href="discografia.html#maquina">La Máquina de Hacer Pájaros</a> </li>
-            <li><a href="discografia.html#seru">Serú Girán</a></li>
-            <li><a href="discografia.html#solista">Solista</a></li>
-            <li><a href="discografia.html#aznar">Con Pedro Aznar</a></li>
-            <li><a href="discografia.html#mercedes">Con Mercedes Sosa</a></li>
-            <li><a href="discografia.html#pettinato"> Con Roberto Pettinato</a></li>
-          </ul>
-        </li>
-        <li><a href="novedades.html">Novedades</a></li>
-        <li><a href="contacto.html">Contacto</a></li>
-      </ul>
-    </nav>
-    <h1 class="titulo">Biografía</h1>
-
-
+  <header class="header">
+    <a href="index.html" class="logo">Charly García</a>
+    <input class="menu-btn" type="checkbox" id="menu-btn">
+    <label class="menu-icon" for="menu-btn"><span class="nav-icon"></span> </label>
+    <ul class="menu">
+      <li><a href="index.html">Inicio</a></li>
+      <li><a href="biografia.html">Biografía</a></li>
+      <li><a href="galeria.html">Galería</a></li>
+      <li><a href="discografia.html">Discografía</a></li>
+      <li><a href="novedades.html">Novedades</a></li>
+      <li><a href="contacto.html">Contacto</a></li>
+    </ul>
   </header>
+  <h1 class="titulo">Biografía</h1>
   <div class="introBio">
     <br>
     <p>
@@ -124,9 +112,82 @@
       Años más tarde, en 2002, una reedición del disco en formato CD, pondría las cosas en su lugar.
       El folk acústico de la propuesta original derivó en un estilo más eléctrico y elaborado, aunque sin perder la frescura que caracterizó a la agrupación.</p>
   </div>
-
+  <div class="bioMaquina">
+    <h2>La Máquina de Hacer Pájaros</h2>
+    <p>Sui Géneris estaba agotado. Charly comenzó a incursionar por otros caminos de la música.
+      A la vez, empezó a ir al psicoanalista porque se seguía sintiendo muy angustiado.
+      Se pasaba todo el día encerrado en su departamento, tocando y componiendo, prácticamente sin hablar con nadie.
+      Después de grabar el álbum PorSuiGieco, el siguiente proyecto de García fue La Máquina de Hacer Pájaros
+      (nombre que tomó de una historieta del dibujante Crist), con Carlos Cutaia (teclados),
+      Gustavo Bazterrica (guitarra y coros), José Luis Fernández (bajo y coros)
+      y Oscar Moro (batería y percusión).</p>
+    <p>La Máquina fue el intento más complejo y profundo de rock sinfónico en la Argentina, y en él,
+      García introdujo la novedad de dos tecladistas simultáneos.
+      Esta banda fue una de las bandas argentinas más trabajadas en cuanto a su sonido,
+      el grupo no fue bien recibido por la crítica y el público,
+      pero su sonido se adelantó varios años en el tiempo.<br>
+      Debutaron en Cosquín, donde estrenaron algunos temas que luego compondrían
+      el disco que llevó el mismo nombre de la banda, durante varios meses, de jueves a domingo,
+      se presentaban en La Bola Loca, el boliche de Atilio Stampone que alberga cada noche
+      a más de doscientas personas para poder verlos tocar en vivo. <br>
+      El Golpe Militar asustó a todos, Charly García sentía miedo y salía a la calle lo menos posible,
+      creía que en cualquier momento su nombre integraría las listas negras, no solo temía por su vida,
+      sino también porque pronto iba a convertirse en papá.
+      En marzo de 1977 María Rosa dio a luz a Miguel Ángel García, a pesar de la llegada del bebé,
+      las cosas en el matrimonio no andaban nada bien, Charly García estaba muy embalado
+      en sus proyectos, solo prestaba atención a su música y ella se sentía sola,
+      a los pocos meses decidieron separarse. <br>
+      En el Festival del Amor fue la última presentación de La Máquina,
+      en un colmado Luna Park, el 11 de noviembre de 1977, donde compartieron el escenario con
+      Nito Mestre, León Gieco, Raúl Porchetto, Gustavo Santaolalla, los hermanos Makaroff, entre otros.
+      A García le costaba acostumbrarse a esa nueva vida de padre, alejado de María Rosa. En ese momento
+      aciago conoció a Marisa Zoca Pederneiras, una bailarina brasileña del ballet de Oscar Araiz.
+      Zoca sería su mujer hasta fines de los años ochenta y la inspiradora de varias de sus canciones,
+      como «Zocacola» y «Ella adivinó».</p>
+  </div>
+  <div class="bioSeru">
+    <p>Tras las peleas en La Máquina, Charly García tomó la determinación de dejar la banda en 1977
+      y viajar a Brasil con David Lebón, su amigo desde la época de Sui Géneris.
+      Con el dinero recaudado en el Festival del Amor (Luna Park, 11 de noviembre de 1977)
+      alquilaron una casa por tres meses en Búzios, al norte de Río de Janeiro.
+      La elección del lugar se debió a la necesidad de García de estar cerca de su novia Zoca Pederneira
+      y, de paso, para escapar a la noche represiva de la dictadura militar que gobernaba la Argentina.
+      En San Pablo, Charly conoció a los padres de Zoca. Los Pederneira eran una familia de artistas, y se quedaron fascinados con Charly.
+      Artísticamente hablando, García fue influenciado por ciertos artistas brasileños, sobre todo Milton Nascimento. <br>
+      A pesar de los éxitos comerciales de Sui Géneris, Charly era indigente. En 1978 vivió con Zoca en Brasil una vida centrada en la naturaleza,
+      la pesca y la recolección de frutas. Charly estaba ahora decidido a formar una nueva banda, pero él todavía estaba en la ruina.
+      Haciendo su camino de retorno a Buenos Aires, comenzó una nueva búsqueda de compañeros para banda.
+      Charly necesitaba un bajista y un baterista, y se encuentran en un concierto de Pastoral.
+      Allí se contrató a un bajista talentoso de 19 años de edad, Pedro Aznar, además de su antiguo compañero de La Máquina,
+      el baterista Oscar Moro. La banda estaba integrada por Charly García (voz, teclados), David Lebón (voz, guitarras),
+      Pedro Aznar (bajo, voz), y Oscar Moro (batería). Charly y David eran los compositores principales.</p>
+    <p>Charly García ahora tenía una banda completa, pero todavía le faltaba dinero. En 1978, Billy Bond se reencontró en San Pablo
+      con García y Lebón, que le estaban dando forma a Serú Girán. Billy les produjo el disco de ese nombre, haciéndoles firmar un contrato leonino.
+      No satisfecho con esto, Bond tomó algunas pistas grabadas por la banda y descartadas para Serú Girán, agregó encima su voz
+      y las usó para Billy Bond and the Jets, un disco editado en 1979 que pasó desapercibido en aquella época. <br>
+      Luego dicha formación se desarma y queda conformada Serú Girán,
+      con melodías virtuosas y letras que entre la ironía y la angustia retrataron la situación bajo la dictadura argentina.
+    </p>
+    <p>Aunque la banda regresó a Buenos Aires con grandes expectativas para el nuevo proyecto de Charly García, los comienzos fueron difíciles,
+      era 1978 y el primer disco no convencía a un público escéptico, el primer concierto de la banda fue mal recibido, ya que el público
+      se esperaba una nueva encarnación de Sui Generis, al día siguiente, el OP especializado de prensa denomina a Serú Girán como
+      la peor banda en Argentina y acusó a David Lebón de que su voz en sus canciones sonaba homosexual,
+      la relación de la banda con los medios de comunicación no fue cordial. Un número de la popular revista argentina llamada Gente
+      publicó un artículo despectivo titulado «Charly García: ¿ídolo o qué?». A pesar de la fría recepción, los miembros de Serú Girán
+      estaban convencidos de que tenían un buen proyecto y persistió. Con el tiempo obtuvo cierta aceptación del público.</p>
+    <p>Serú Girán continuó durante el año 1979 y evolucionó notablemente. Su nuevo disco fue titulado La grasa de las capitales
+      y su portada era una broma dirigida a la revista Gente. El público le dio al álbum una recepción entusiasta.
+      Las presentaciones de la banda fueron resultando cada vez mejores, y finalmente se llevaron a cabo en lugares más grandes.
+      El «especializado» de prensa cambió de tono, y un romance parecía desarrollarse entre el pueblo y Serú Girán. <br>
+      En enero de 1981 Aznar fue convocado por el guitarrista estadounidense Pat Metheny para incorporarse a su banda.
+      Acordaron encontrarse en Estados Unidos, ya que Pedro viajaría al año siguiente para estudiar en el Berklee College of Music.
+      Este hecho marcaría el final de la banda. El 5 y 6 de marzo de 1982 se hicieron dos recitales para despedir a Pedro Aznar,
+      sin saber que sería la despedida de Seru Giran hasta diez años después. Los emotivos recitales fueron grabados y el resultado fue
+      el quinto disco de la banda No llores por mí, Argentina. Ese año, García inició su carrera solista. <br>
+      En 2019, en un vídeo filmado junto con Pedro Aznar y David Lebon, los miembros vivos de Serú, anunciaron la remasterización del disco La Grasa de las Capitales.</p>
+  </div>
   <!--- Falta mas bio----------------->
-<hr class="corte">
+  <hr class="corte">
   <footer class="foot">
     <a href="#top">Volver arriba.</a>
   </footer>
