--- a/contacto.html
+++ b/contacto.html
@@ -9,76 +9,27 @@
   discos discografia seru serugiran maquina de hacer pajaros maquinadehacerpajaros suigeneris sui generis leon gieco porSuiGieco Aznar Pedroaznar Mercedes Sosa
   mercedessosa Roberto Pettinato Robertopettinato Cerati gustavocerati Spinetta luisalbertospinetta">
   <link rel="stylesheet" href="css/bootstrap.min.css">
+  <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css">
   <link rel="stylesheet" href="css/prueba.css">
   <script src="js/bootstrap.js"></script>
   <title>Charly Garcia- Contacto</title>
 </head>
 
 <body>
-  <header class="contact">
-    <nav class="navegador">
-      <ul class="menu">
-        <li><a href="index.html">Inicio</a></li>
-        <li><a href="biografia.html">Biografía</a></li>
-        <li><a href="galeria.html">Galería</a></li>
-        <li><a href="discografia.html">Discografía</a>
-          <ul class="submenu">
-            <li><a href="discografia.html#suiGeneris">Sui Generis</a></li>
-            <li><a href="discografia.html#gieco">PorSuiGieco</a></li>
-            <li><a href="discografia.html#maquina">La Máquina de Hacer Pájaros</a> </li>
-            <li><a href="discografia.html#seru">Serú Girán</a></li>
-            <li><a href="discografia.html#solista">Solista</a></li>
-            <li><a href="discografia.html#aznar">Con Pedro Aznar</a></li>
-            <li><a href="discografia.html#mercedes">Con Mercedes Sosa</a></li>
-            <li><a href="discografia.html#pettinato"> Con Roberto Pettinato</a></li>
-          </ul>
-        </li>
-        <li><a href="novedades.html">Novedades</a></li>
-        <li><a href="contacto.html">Contacto</a></li>
-      </ul>
-    </nav>
-    <h1 class="titulo">Contacto</h1>
+  <header class="header">
+    <a href="index.html" class="logo">Charly García</a>
+    <input class="menu-btn" type="checkbox" id="menu-btn">
+    <label class="menu-icon" for="menu-btn"><span class="nav-icon"></span> </label>
+    <ul class="menu">
+      <li><a href="index.html">Inicio</a></li>
+      <li><a href="biografia.html">Biografía</a></li>
+      <li><a href="galeria.html">Galería</a></li>
+      <li><a href="discografia.html">Discografía</a></li>
+      <li><a href="novedades.html">Novedades</a></li>
+      <li><a href="contacto.html">Contacto</a></li>
+    </ul>
   </header>
-<!---
-  <div class="formas">
-    <p>¿Te gustaría trabajar con nosotros? Dejanos tus datos.</p>
-    <form class="nombreyapellido" action="contacto.html" method="post">
-      <label for="nombre">Nombre:</label>
-      <input type="text" name="nombre" placeholder="nombre">
-      <br>
-      <label for="apellido">Apellido:</label>
-      <input type="text" name="apellido" placeholder="apellido">
-      <br>
-      <label for="email">Email:</label>
-      <input type="email" name="email" placeholder="tuemail@correo.com.ar">
-    </form>
-    <form>
-      <label for="instrumento">Instrumento:</label>
-      <select name="instrumento">
-        <option value="">- - -</option>
-        <option value="voz">voz</option>
-        <option value="guitarra">guitarra</option>
-        <option value="bajo">bajo</option>
-        <option value="bateria">bateria</option>
-        <option value="piano">piano</option>
-        <option value="otro">otro</option>
-      </select>
-    </form>
-    <br>
-    <p>Dejanos un comentario:</p>
-    <form class="coment" action="contacto.html" method="post">
-      <textarea name="comentario" rows="8" cols="50" maxlength="250"></textarea>
-      <input type="reset" name="" value="Limpiar">
-    </form>
-    <br>
-    <label for="checkbox">¿Trabajas en alguna banda/ algun proyecto actualmente? Si:</label>
-    <input type="checkbox" name="acepta" value="1">
-    <br>
-    <input type="submit" name="" value="Enviar">
-    <br>
-    <br>
-  </div> -->
-
+<h1 class="titulo">Contacto</h1>
   <form class="formulario">
     <div class="formulario__mail form-group row">
       <label for="inputEmail3" class="col-sm-1 col-form-label">Email</label>
@@ -130,14 +81,6 @@
       </div>
     </div>
   </form>
-
-<div class="animacion">
-
-</div>
-  <div class="animacion__imagen"><a href="https://www.youtube.com/watch?v=pt92esV--Bg">
-  <img src="multimedia/snm.png" alt=""></a>
-  </div>
-
   <hr class="corte">
   <div class="foot">
     <footer>
