--- a/index.html
+++ b/index.html
@@ -21,28 +21,18 @@
 </head>
 
 <body>
-  <header class="top">
-    <nav class="navegador">
-      <ul class="menu">
-        <li><a href="index.html">Inicio</a></li>
-        <li><a href="biografia.html">Biografía</a></li>
-        <li><a href="galeria.html">Galería</a></li>
-        <li><a href="discografia.html">Discografía</a>
-          <ul class="submenu">
-            <li><a href="discografia.html#suiGeneris">Sui Generis</a></li>
-            <li><a href="discografia.html#gieco">PorSuiGieco</a></li>
-            <li><a href="discografia.html#maquina">La Máquina de Hacer Pájaros</a> </li>
-            <li><a href="discografia.html#seru">Serú Girán</a></li>
-            <li><a href="discografia.html#solista">Solista</a></li>
-            <li><a href="discografia.html#aznar">Con Pedro Aznar</a></li>
-            <li><a href="discografia.html#mercedes">Con Mercedes Sosa</a></li>
-            <li><a href="discografia.html#pettinato"> Con Roberto Pettinato</a></li>
-          </ul>
-        </li>
-        <li><a href="novedades.html">Novedades</a></li>
-        <li><a href="contacto.html">Contacto</a></li>
-      </ul>
-    </nav>
+  <header class="header">
+    <a href="index.html" class="logo">Charly García</a>
+    <input class="menu-btn" type="checkbox" id="menu-btn">
+    <label class="menu-icon" for="menu-btn"><span class="nav-icon"></span> </label>
+    <ul class="menu">
+      <li><a href="index.html">Inicio</a></li>
+      <li><a href="biografia.html">Biografía</a></li>
+      <li><a href="galeria.html">Galería</a></li>
+      <li><a href="discografia.html">Discografía</a></li>
+      <li><a href="novedades.html">Novedades</a></li>
+      <li><a href="contacto.html">Contacto</a></li>
+    </ul>
   </header>
    <h1 class="titulo">Charly García</h1>
 
@@ -51,7 +41,7 @@
     <img src="multimedia/Charly_García_por_Alejandro_Kuropatwa.jpg" alt="Foto de Charly Garcia por Alejandro Kuropatwa en 1989" class="fotoIndex">
   </div>
 
-<div class="collapseIndex" id="accordion">
+<!--<div class="collapseIndex" id="accordion">
       <div class="card">
         <div class="card-header" id="headingOne">
           <h5 class="mb-0">
@@ -98,9 +88,9 @@
           </div>
         </div>
       </div>
-    </div>
+    </div>-->
 
-  <!--<div class="indexInfo">
+  <div class="indexInfo">
 <div class="sobreCharly">
     <h2>Sobre Charly</h2>
     <p>Carlos Alberto García Moreno es un cantautor, músico y productor argentino de rock.</p>
@@ -117,7 +107,7 @@
       funk rock, jazz rock, rock alternativo, piano rock, rock progresivo, rock experimental, rock sinfónico y tango rock
     </p>
   </div>
-</div>-->
+</div>
 
   <div class="videoInsertado">
     <iframe width="560" height="315" src="https://www.youtube.com/embed/LGG9B-x6BhU" frameborder="1" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
