--- a/galeria.html
+++ b/galeria.html
@@ -20,30 +20,20 @@
 <title></title>
   </head>
   <body>
-  <header>
-    <nav class="navegador">
+    <header class="header">
+      <a href="index.html" class="logo">Charly García</a>
+      <input class="menu-btn" type="checkbox" id="menu-btn">
+      <label class="menu-icon" for="menu-btn"><span class="nav-icon"></span> </label>
       <ul class="menu">
         <li><a href="index.html">Inicio</a></li>
         <li><a href="biografia.html">Biografía</a></li>
         <li><a href="galeria.html">Galería</a></li>
-        <li><a href="discografia.html">Discografía</a>
-          <ul class="submenu">
-            <li><a href="discografia.html#suiGeneris">Sui Generis</a></li>
-            <li><a href="discografia.html#gieco">PorSuiGieco</a></li>
-            <li><a href="discografia.html#maquina">La Máquina de Hacer Pájaros</a> </li>
-            <li><a href="discografia.html#seru">Serú Girán</a></li>
-            <li><a href="discografia.html#solista">Solista</a></li>
-            <li><a href="discografia.html#aznar">Con Pedro Aznar</a></li>
-            <li><a href="discografia.html#mercedes">Con Mercedes Sosa</a></li>
-            <li><a href="discografia.html#pettinato"> Con Roberto Pettinato</a></li>
-          </ul>
-        </li>
+        <li><a href="discografia.html">Discografía</a></li>
         <li><a href="novedades.html">Novedades</a></li>
         <li><a href="contacto.html">Contacto</a></li>
       </ul>
-    </nav>
+    </header>
     <h1 class="titulo">Galería</h1>
-  </header>
 
   <div class="galeria__carousel">
     <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
