ultimos retoques a discografia e index

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 </head>
 
 <body>
-  <header class="header">
+  <header class="header top">
     <a href="index.html" class="logo">Charly García</a>
     <input class="menu-btn" type="checkbox" id="menu-btn">
     <label class="menu-icon" for="menu-btn"><span class="nav-icon"></span> </label>
@@ -34,91 +34,39 @@
       <li><a href="contacto.html">Contacto</a></li>
     </ul>
   </header>
-   <h1 class="titulo">Charly García</h1>
+  <h1 class="titulo">Charly García</h1>
 
 
   <div class="divFoto">
     <img src="multimedia/Charly_García_por_Alejandro_Kuropatwa.jpg" alt="Foto de Charly Garcia por Alejandro Kuropatwa en 1989" class="fotoIndex">
   </div>
 
-<!--<div class="collapseIndex" id="accordion">
-      <div class="card">
-        <div class="card-header" id="headingOne">
-          <h5 class="mb-0">
-            <button class="btn btn-link" data-toggle="collapse" data-target="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
-              Sobre Charly
-            </button>
-          </h5>
-        </div>
-
-        <div id="collapseOne" class="collapse show" aria-labelledby="headingOne" data-parent="#accordion">
-          <div class="card-body">
-            Carlos Alberto García Moreno es un cantautor, músico y productor argentino de rock.
-          </div>
-        </div>
-      </div>
-      <div class="card">
-        <div class="card-header" id="headingTwo">
-          <h5 class="mb-0">
-            <button class="btn btn-link collapsed" data-toggle="collapse" data-target="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">
-              Distinciones
-            </button>
-          </h5>
-        </div>
-        <div id="collapseTwo" class="collapse" aria-labelledby="headingTwo" data-parent="#accordion">
-          <div class="card-body collapseIndex-info">
-            <p>Doctor honoris causa de la Universidad Nacional de Rosario, Premio a la Trayectoria de los Premios Clarín Espectáculos, <br>
-              Premio Grammy Latino a la Excelencia Musical. En los Premios Gardel 2018 se impuso en seis de las siete categorías a las que fue nominado.</p>
-          </div>
-        </div>
-      </div>
-      <div class="card">
-        <div class="card-header" id="headingThree">
-          <h5 class="mb-0">
-            <button class="btn btn-link collapsed" data-toggle="collapse" data-target="#collapseThree" aria-expanded="false" aria-controls="collapseThree">
-              Géneros Musicales
-            </button>
-          </h5>
-        </div>
-        <div id="collapseThree" class="collapse" aria-labelledby="headingThree" data-parent="#accordion">
-          <div class="card-body">
-            Los géneros musicales en los cuales García se ha desempeñado han sido art rock, pop rock, post punk, synth pop, lo-fi, new wave,
-              <br>
-              funk rock, jazz rock, rock alternativo, piano rock, rock progresivo, rock experimental, rock sinfónico y tango rock.
-          </div>
-        </div>
-      </div>
-    </div>-->
-
-  <div class="indexInfo">
-<div class="sobreCharly">
-    <h2>Sobre Charly</h2>
-    <p>Carlos Alberto García Moreno es un cantautor, músico y productor argentino de rock.</p>
-  </div>
-  <div class="distinciones">
-    <h2>Distinciones</h2>
+  <div class="informacion">
+    <div class="informacion_item"><h2>Sobre Charly</h2>
+    <p>Carlos Alberto García Moreno es un cantautor, músico y productor argentino de rock.</p></div>
+    <div class="informacion_item"><h2>Distinciones</h2>
     <p>Doctor honoris causa de la Universidad Nacional de Rosario, Premio a la Trayectoria de los Premios Clarín Espectáculos, <br>
       Premio Grammy Latino a la Excelencia Musical. En los Premios Gardel 2018 se impuso en seis de las siete categorías a las que fue nominado.</p>
   </div>
-  <div class="generos">
-    <h2>Géneros Musicales</h2>
+    <div class="informacion_item"><h2>Géneros Musicales</h2>
     <p>Los géneros musicales en los cuales García se ha desempeñado han sido art rock, pop rock, post punk, synth pop, lo-fi, new wave,
       <br>
-      funk rock, jazz rock, rock alternativo, piano rock, rock progresivo, rock experimental, rock sinfónico y tango rock
-    </p>
-  </div>
-</div>
+      funk rock, jazz rock, rock alternativo, piano rock, rock progresivo, rock experimental, rock sinfónico y tango rock.
+    </p></div>
 
-  <div class="videoInsertado">
-    <iframe width="560" height="315" src="https://www.youtube.com/embed/LGG9B-x6BhU" frameborder="1" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+  </div>
+
+  <div class="videoIndex">
+    <iframe class="responsive-iframe" width="560" height="315" src="https://www.youtube.com/embed/LGG9B-x6BhU" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
   </div>
   <br>
   <hr class="corte">
-  <div class="foot">
     <footer>
-      <a href="#top">Volver arriba.</a>
+      <div class="pie">
+        <a href="#top">Volver arriba</a>
+      </div>
     </footer>
-  </div>
+
 </body>
 
 </html>
